--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "node.extend": "^1.0.10",
     "open": "^0.0.5",
     "proxy-middleware": "^0.5.0",
-    "serve-index": "^1.1.4",
+    "koa-serve-list": "^1.0.1",
     "koa-serve-static": "^1.0.0",
     "through2": "^0.5.1",
     "tiny-lr": "0.1.4",
