--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "supertest": "^1.2.0"
   },
   "dependencies": {
-    "koa": "^2.0.0-alpha.3",
+    "koa": "^1.2.0",
     "koa-livereload": "^0.1.23",
     "gulp-util": "^2.2.19",
     "isarray": "0.0.1",
