--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
     "supertest": "^1.2.0"
   },
   "dependencies": {
-    "koa": "^1.2.0",
-    "koa-livereload": "^0.1.23",
     "gulp-util": "^2.2.19",
     "isarray": "0.0.1",
+    "koa": "^1.2.0",
+    "koa-livereload": "^0.1.23",
+    "koa-serve-list": "^1.0.1",
+    "koa-serve-static": "^1.0.0",
     "node.extend": "^1.0.10",
     "open": "^0.0.5",
     "proxy-middleware": "^0.5.0",
-    "koa-serve-list": "^1.0.1",
-    "koa-serve-static": "^1.0.0",
     "through2": "^0.5.1",
+    "thunkify": "^2.1.2",
     "tiny-lr": "0.1.4",
     "watch": "^0.11.0"
   }
